Added image to  Website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Test GITHUB</title>
 </head>
 <body>
+    <img src="Vol.png"
     <h1>Volketia</h1>
     <h2>Was vary cute</h2>
 </body>    
